# plex-api.rs

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  STATUS.md
.devcontainer/: devcontainer.json
.github/: release-please-config.json  release-please-manifest.json
.github/workflows/: lints-nightly.yml  lints.yml  release.yml  test.yml  update_features.yml  update_pms.yml
crates/http-adapter-isahc/: CHANGELOG.md  Cargo.toml  README.md
crates/http-adapter-isahc/src/: lib.rs
crates/http-adapter-isahc/tests/: isahc.rs
crates/plex-api/: CHANGELOG.md  Cargo.toml  MIGRATION.md
crates/plex-api/examples/: download-queue.rs  transcoding-dos.rs
crates/plex-api/src/: error.rs  http_client.rs  isahc_compat.rs  lib.rs  response_ext.rs  url.rs
crates/plex-api/src/media_container/: devices.rs
crates/plex-api/src/media_container/server/: feature.rs
crates/plex-api/src/myplex/: claim_token.rs  device.rs  mod.rs  pin.rs  privacy.rs  webhook.rs
crates/plex-api/src/myplex/sharing/: friend.rs
crates/plex-api/src/server/: library.rs  mod.rs  transcode.rs
crates/plex-api/src/server/transcode/: download_queue.rs  mod.rs  session.rs
crates/plex-api/tests/: client.rs  download_queue.rs  transcode.rs
crates/plex-api/tests/fixtures/offline/: mod.rs
crates/plex-api/tests/fixtures/online/: mod.rs
crates/plex-api/tests/mocks/download_queue/: add_item_response.json  empty_items.json  item_available.json  item_deciding.json  item_processing.json  item_waiting.json  queue_created.json
crates/plex-api/tests/mocks/myplex/api/v2/: features.json
crates/plex-cli/: CHANGELOG.md  Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: get_last_plex_tags.rs
