[package]
name = "plex-api"
version = "0.0.12"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
categories = ["api-bindings"]
edition = "2021"
description = "Library for communication with Plex server. Work in progress, not ready for any use. See github for details."
license = "MIT/Apache-2.0"
repository = "https://github.com/andrey-yantsen/plex-api.rs"
readme = "../../README.md"
rust-version = "1.88.0"

[dependencies]
isahc = { version = "^1.7.2", features = ["json", "text-decoding"] }
uuid = { version = "^1.2", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures = "^0.3.25"
serde_with = { version = "^3.0", features = ["json"] }
quick-xml = { version = "^0.38", features = ["serialize"] }
serde_plain = "^1.0.1"
serde_repr = "^0.1"
time = { version = "^0.3", features = [
  "serde-well-known",
  "serde-human-readable",
] }
http = "^1.3.1"
http-serde = "^2.1.1"
serde_urlencoded = "^0.7.1"
thiserror = "^2.0"
sysinfo = "0.37.2"
monostate = "^1.0.0"
serde-aux = "^4.1.2"
enum_dispatch = "^0.3.8"
secrecy = { version = "^0.10", features = ["serde"] }
tracing = { version = "^0.1.37", features = ["attributes"] }
semver = { version = "^1.0.27", features = ["serde"] }
content_disposition = "^0.4.0"

[build-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
inflections = "^1.0"
regex = "^1.7"

[dev-dependencies]
httpmock = "^0.8"
plex-api-test-helper = { path = "../plex-api-test-helper" }
rstest = "^0.26.1"
rpassword = "^7.2"
dash-mpd = { version = "^0.18.4", default-features = false }
hls_m3u8 = "^0.5.1"
mp4 = "^0.14.0"
mp3-metadata = "^0.4.0"
image = "^0.25.0"
pico-args = "^0.5.0"
tracing-subscriber = "^0.3"
tokio = { version = "1.47.1", features = ["rt", "macros", "fs", "io-util"] }
tokio-util = { version = "0.7.16", features = ["compat"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
  "precommit-hook",
  "run-cargo-test",
  "run-cargo-clippy",
  "run-cargo-fmt",
]

[features]
tests_deny_unknown_fields = []
tests_only_online = []
tests_only_online_unclaimed_server = ["tests_only_online"]
tests_only_online_claimed_server = ["tests_only_online"]
tests_shared_server_access_token = []
